--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest",
     "clean": "rm -rf .next node_modules/.cache",
     "build:clean": "npm run clean && npm run build"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.28.0",
-    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@vercel/postgres": "^0.10.0",
@@ -42,6 +42,7 @@
     "eslint-config-next": "^15.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   }
 }
