--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "build:clean": "npm run clean && npm run build"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.28.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@vercel/postgres": "^0.10.0",
@@ -21,6 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "^15.1.0",
+    "next-auth": "^4.24.11",
     "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
