--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,11 @@ USDA_API_KEY=your_usda_api_key_here
 NEXTAUTH_SECRET=generate_with_openssl_rand_base64_32
 NEXTAUTH_URL=http://localhost:3000
 
-# OAuth Providers (Optional - remove if not using)
+# OAuth Providers (Optional - BOTH required for each provider to work)
+# Google OAuth (requires both CLIENT_ID and CLIENT_SECRET)
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
+# Get from: https://console.cloud.google.com/apis/credentials
 
 # Database
 DATABASE_URL=your_database_connection_string
