--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.525.0",
     "next": "^15.1.0",
     "next-auth": "^4.24.11",
